# Math-Stuff

./: .gitignore  .gitpod.yml  README.md  fourier_series.py  graph_2d.py  helper.py  logic.py  pyproject.toml  requirements.txt  setup.py  taylor_series.py
MathStuff/: __init__.py  calculus.py  equation.py  equation_nodes.py  fourier_series.py
MathStuff/parser/: interpreter.py  main.py  parse.py  tokenizer.py
tests/: test_logic.py
