[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MathStuff"
version = "0.0.1"
authors = [
  { name="Vipul Cariappa", email="vipulcariappa@gmail.com" },
]
description = "Math Stuff"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Vipul-Cariappa/Math-Stuff"
"Bug Tracker" = "https://github.com/Vipul-Cariappa/Math-Stuff/issues"
